Fix: menus.c:2374: warning: implicit declaration of function `putenv`

Ensure _GNU_SOURCE is defined on Linux builds before including <stdlib.h>
so the prototype is exposed in the header properly.

https://bugs.freedesktop.org/show_bug.cgi?id=32696

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>
Reviewed-by: Julien Cristau <jcristau@debian.org>